--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-/target/
+# Eclipse specific files
+.metadata/
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# Windows specific files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Eclipse project files
+.classpath
+.project
+
+# Java related files
+*.class
+*.jar
+*.war
+*.ear
+
+# Maven specific files
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Database dumps
+*.sql
